[package]
name = "adb-utils"
version = "0.6.0"
edition = "2021"
license = "MIT"
description = "Rust implementation of commonly used ADB commands"
repository = "https://github.com/radu781/adb-utils-rs"
keywords = ["adb"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[lib]
name = "adb_utils"
path = "src/lib.rs"

[[example]]
name = "list_files"
path = "examples/shell/list_files.rs"

[[example]]
name = "general_info"
path = "examples/general/general_info.rs"

[[example]]
name = "pull"
path = "examples/file_transfer/pull.rs"

[[example]]
name = "push"
path = "examples/file_transfer/push.rs"

[[example]]
name = "pair"
path = "examples/networking/pair.rs"
